--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.10)
+
 find_package(msgpack-cxx REQUIRED)
 include_directories(include)
 set(MSGPACK_EXTENSION_FILES
