--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -19,4 +19,4 @@ jobs:
       duckdb_version: v0.10.0
       extension_name: msgpack_maps
       # run only linux_amd64 to save github actions minutes
-      exclude_archs: "linux_amd64_gcc4;linux_arm64;osx_amd64;osx_arm64;windows_amd64"
+      exclude_archs: "linux_amd64_gcc4;linux_arm64;osx_amd64;osx_arm64;windows_amd64;windows_amd64_rtools;wasm_mvp;wasm_eh;wasm_threads"
